--- a/css/eunjeong.scss
+++ b/css/eunjeong.scss
@@ -24,30 +24,38 @@ $border-color: #DDD;
 }
 
 #hd {
-  max-width: 120rem; // 1920px
   height: 4.5rem; // 72px
   position: relative;
   z-index: 10;
-
-  .container {
-    margin: 0 auto;
-    padding: 1.25rem 0; // 20px 0
+  position: relative;
+  @media (max-width:991px) {
+    height:3.5rem;
+  }
+  h1 {
+    font-size:initial;
   }
 }
-
-#gnb a {
-  text-decoration: none;
-  transition: color 0.3s ease;
-  font-weight: 700;
-  padding: 0.625rem; // 10px
-
-  &:hover {
-    color: $secondary-color;
+#gnb {
+  width:0;
+  a {
+    text-decoration: none;
+    transition: color 0.3s ease;
+    font-weight: 700;
+    padding: 0.625rem; // 10px
+  
+    &:hover {
+      color: $secondary-color;
+    }
   }
 }
 
 .Category-btn {
   border: none;
+  width:0;
+  svg {
+    width:26px;
+    height:26px;
+  }
 }
 
 .top-logo {
@@ -63,15 +71,20 @@ $border-color: #DDD;
   gap: 0.3125rem; // 5px
   justify-content: flex-end;
   padding: 0.3125rem 0.625rem; // 5px 10px
+  width:0;
+  @media (max-width:991px) {
+    padding:0;
+  }
 
   svg {
-    width: 1.25rem; // 20px
-    height: 1.25rem; // 20px
+    width: 1.75rem; // 20px
+    height: 1.75rem;; // 20px
     margin-right: 0.3125rem; // 5px
   }
 }
 
 a {
+  display:block;
   gap: 0.3125rem;
   text-decoration: none;
   color: $primary-color;
@@ -79,8 +92,7 @@ a {
 
 .video-container {
   position: relative;
-  max-width: 100%;
-  height: calc(100vh - 80px); 
+  height: calc(100vh - 100px); 
   margin: 0 auto;
   @extend .d-flex;
   justify-content: center;
@@ -88,17 +100,28 @@ a {
   overflow: hidden;
   border-radius: 0.625rem; // 10px
   z-index: -1;
+
+  video {
+    height:100%;
+    @media (max-width:991px) {
+      height:auto;
+      width:100%;
+    }
+
+    @media (max-width:480px) {
+      height:100%;
+      width:auto;
+    }
+  }
 }
 
 .video-bg {
   position: absolute;
-  max-width: 112.375rem; // 1798px
   height: 100%; // 870px
   top: 0;
   left: 0;
   right: 0;
   margin: auto;
-  width: calc(100% - 30px);
   border-radius: 0.625rem; // 10px
   z-index: -1;
   clip-path: inset(0 round 0.625rem); // 10px
@@ -117,26 +140,39 @@ a {
 
 .search-box {
   position: absolute;
-  max-width: 89.6875rem; // 1435px
   height: 5rem; // 80px
   @extend .jcc;
   align-content: center;
-  top: 4.5rem; // 72px
+  top: 100%;
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
+  width:100%;
+  max-width:1440px;
+  
+  .search-bg{
+    svg {
+      margin:0 auto;
+      height:100%;
+    }
+  }
 }
 
 .search-container {
-  position: absolute;
-  width: 89.6875rem; // 1435px
-  height: 4.25rem; // 68px
-  gap: 1.3125rem; // 21px
   @extend .jcc;
   align-items: flex-end;
-  left: 50%;
-  top: 4.5rem; // 72px
-  transform: translateX(-50%);
+  margin:0 auto;
+  ::before {
+    content: '';
+    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1435' height='80' viewBox='0 0 1435 80' fill='none'%3E%3Cpath d='M0 0H1435L1398.51 60.6284C1391.27 72.6491 1378.27 80 1364.24 80H70.7646C56.7343 80 43.7296 72.6491 36.494 60.6284L0 0Z' fill='white'/%3E%3C/svg%3E") no-repeat center;
+    background-size:cover;
+    width:100%;
+    height:100%;
+    position: absolute;
+    top:0; left:0;
+    max-width:1440px;
+    z-index: -1;
+  }
 }
 
 .topwhere,
