--- a/css/jaeeun.scss
+++ b/css/jaeeun.scss
@@ -22,26 +22,32 @@
                 text-align:left;
             }
         }
+
+        .all-btn {
+            position: absolute;
+            top: 10px;
+            right: 0;
+            padding: 5px 25px;
+            background: none;
+            border-radius: 50px;
+            @media (max-width:991px) {
+                display:none;
+            }
+            
+            
+        }
     }
 
-  
-    .all-btn {
-        position: absolute;
-        top: 10px;
-        right: 0;
-        padding: 5px 25px;
-        background: none;
-        border: 1px solid #ddd;
-        border-radius: 50px;
-        @media (max-width:991px) {
-                display:none;
-        }
-  
-      &:hover {
-            background-color: rgb(221, 221, 221);
-      }
+    .mo-all-btn {
+        display: block;
+        width:100%;
+        padding:10px 0;
+        font-size:16px;
+        background:none;
+        border-radius:50px;
+        
     }
-  
+
     .con_txt {
         display: flex;
         flex-direction: column;
@@ -49,11 +55,14 @@
   
         .price {
             font-weight: 700;
-      }
+        }
   
         .percent {
             margin-right: 5px;
-      }
+        }
+        .won {
+            text-decoration: line-through;
+        }
     }
   
     .con_img {
@@ -71,10 +80,55 @@
         .percent {
             color: #6c7734;
         }
+
+        .all-btn, .mo-all-btn {
+            border: 1px solid #ddd;
+            &:hover {
+                background:#3f422f;
+                border:1px solid;
+                color:#fff;
+            }
+        }
     
+        .nowSwiper {
+            @media (max-width:991px) {
+                margin: 0 -10px;
+            }
+            @media (max-width:480px) {
+                margin: 0 -5px;
+            }
+        }
+
         .swiper-slide {
-            max-width: 297px;
+            max-width: 294px;
             margin-right: 20px;
+            @media (max-width:991px) {
+                max-width: none;
+                margin-right:0;
+                padding: 0 10px 40px;
+            }
+            @media (max-width:480px) {
+                max-width: none;
+                margin-right:0;
+                padding: 0 5px 40px;
+            }
+        }
+
+        .swiper-pagination {
+            position: relative;
+            bottom:0;
+            height:30px;
+            display:flex;
+            .swiper-pagination-bullet {
+                width:100%;
+                border-radius:0;
+                margin:0;
+                height:5px;
+                background:#aaa;
+            }
+            .swiper-pagination-bullet-active {
+                background:#6c7734;
+            }
         }
     
         .now-button-next,
@@ -110,9 +164,12 @@
         }
     
         .con_img_box {
-            height: 200px;
+            max-height: 200px;
             overflow: hidden;
             border-radius: 10px;
+            @media (max-width:991px) {
+                max-height: 300px;
+            }
         }
     }
   
@@ -120,18 +177,111 @@
     .main_con_three {
             background: #faf6f3;
     
-        .all-btn {
+        .all-btn, .mo-all-btn {
             border: 1px solid #c3b8ab;
             color: #9c8972;
+            &:hover {
+                background:#b6996f;
+                border:1px solid;
+                color:#fff;
+            }
         }
     
         .swiper-slide {
             max-width: 403px;
             margin-right: 20px;
     
-        &:last-child {
-                margin-right: 0;
+            &:last-child {
+                    margin-right: 0;
+            }
         }
+
+        .mobile {
+            .swiper-container {
+                overflow: hidden;
+                margin-bottom:20px;
+            }
+            .swiper-slide {
+                max-width: none;
+            }
+
+            .con_img_box {
+                img {
+                    border-radius:10px;
+                }
+            }
+
+            .won, .percent, .review {
+                display: none;
+            }
+
+            .basic_txt {
+                line-height: 1.5;
+            }
+
+            #swiper1 {
+                margin-bottom: 10px;
+                .swiper-slide {
+                    position: relative;
+                    overflow: hidden;
+                    border-radius: 10px;
+                    .con_txt {
+                        position:absolute;
+                        bottom:0;
+                        left:0;
+                        width:100%;
+                        z-index: 1;
+                        padding:25px 20px;
+                        color:#fff;
+                    }
+                    .con_img_box {
+                        height:100%;
+                    }
+
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        width: 100%;
+                        height: 70%;
+                        bottom: 0;
+                        left: 0;
+                        z-index: 0;
+                        background: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 100%);
+                    }
+                    .location {
+                        font-size:16px;
+                        color:#fff;
+                    }                   
+                    .won2, .camping {
+                        color:#fff;
+                        font-size:20px;
+                    }
+                } 
+            }
+
+            #swiper2 {
+                .swiper-slide {
+                    margin:0;
+                    padding:0px 0 10px;
+                    border-bottom:1px solid #E7DDD0;
+                }
+                .con_box {
+                    display:flex;
+                    align-items: center;
+                }
+                .con_img_box {
+                    width:39%;
+                    height:100%;
+                    margin-right:10px;
+                }
+                .con_txt {
+                    width:59%;
+                    padding:0;
+                }
+                .won2 {
+                    font-size: 16px;
+                }
+            }
         }
     
         .con_img_box {
