--- a/css/same.css
+++ b/css/same.css
@@ -29,7 +29,7 @@ body {
 div, dl, ol, ul, li, h1, h2, h3, h4, h5, h6, p, button {padding: 0; margin: 0;}
 
 /* container */
-.container_full {max-width:var(--container_full, 1800px); margin:0 auto; padding:0; width:100%;}
+.container_full {max-width:var(--container_full, 1800px); margin:0 auto; padding:0 30px; width:100%;}
 .container {max-width:var(--container, 1440px); margin:0 auto; padding:0; position:relative; width:100%;}
 
 /* font */
@@ -81,9 +81,16 @@ div, dl, ol, ul, li, h1, h2, h3, h4, h5, h6, p, button {padding: 0; margin: 0;}
   letter-spacing: -1px;
 }
 
+.deskTop {display: block;}
+.mobile {display: none;}
+
 
 @media (max-width:991px) {
-  .container_full {width:94%;}
+  .container_full {width:94%; padding:0;}
   .container {width:94%;}
   .p100 {padding:50px 0;}
+  .main_tit {font-size:1.75rem;}
+  .sub_tit {font-size:1.25rem}
+  .deskTop {display: none;}
+  .mobile {display: block;}
 }
