--- a/css/yena.scss
+++ b/css/yena.scss
@@ -1,9 +1,11 @@
 /* 기본 스타일 */
 .main_tit {
-    font-size: 2.125rem;
     font-weight: 800;
     padding-bottom: 2.5rem;
     line-height: 1.3;
+    @media (max-width:991px) {
+        padding-bottom:20px;
+    }
 }
   
 .basic_txt {
@@ -25,6 +27,10 @@
     .same_btn {
         background:#fff;
         border:none;
+        &:hover {
+            background:#000;
+            color:#fff;
+        }
     }
 
     .text-center {
@@ -126,6 +132,12 @@
         @media (max-width:991px) {
             margin-right: 1.49rem;
         }
+
+        @media (max-width:480px) {
+            margin-right: 2rem;
+            margin-left:-1rem;
+            max-width:14.05rem;
+        }
         
         &::after {
           position: absolute;
@@ -143,6 +155,10 @@
             transition: all 0.4s ease-in-out;
             overflow: hidden;
             box-sizing: border-box;
+
+            @media (max-width:480px) {
+                max-width:17rem;
+            }
             
             &::after {
                 height: 50%;
@@ -248,11 +264,11 @@
         }
         & .swiper-slide {
             opacity: 0;
-            transform: translateY(50px); /* 슬라이드가 아래에서 시작하도록 설정 */
-            transition: opacity 0.5s ease 0.2s, transform 1s ease 0.2s; /* 애니메이션 효과 설정 */
+            //transform: translateY(50px); /* 슬라이드가 아래에서 시작하도록 설정 */
+            //transition: opacity 0.5s ease 0.2s, transform 1s ease 0.2s; /* 애니메이션 효과 설정 */
             &-active {
                 opacity: 1;
-                transform: translateY(0); /* 원래 위치로 애니메이션 */
+                //transform: translateY(0); /* 원래 위치로 애니메이션 */
             }
             & .swiper-slide-prev{
                 opacity: 0;
@@ -394,6 +410,13 @@
   
       &:last-child {
         margin-right: 0;
+      }
+
+      &:hover {
+        .basic_txt {
+            color:#000;
+            font-weight: 700;
+        }
       }
     }
 
@@ -557,6 +580,9 @@
                 margin-right:0;
                 padding:10px 0;
             }
+            &:hover {
+                color:#B6996F;
+            }
         }
     }
 
@@ -626,7 +652,7 @@
         }
         .icon_area {
             &:first-child {
-                margin-left:0;
+                margin-left:10px;
             }
         } 
     }
