--- a/css/jaeeun.css
+++ b/css/jaeeun.css
@@ -52,6 +52,11 @@
 .main_con .con_txt .price {
   font-weight: 700;
 }
+@media (max-width: 480px) {
+  .main_con .con_txt .price {
+    font-size: 16px;
+  }
+}
 .main_con .con_txt .percent {
   margin-right: 5px;
 }
