메인 부분 수정

--- a/css/jaeeun.scss
+++ b/css/jaeeun.scss
@@ -289,7 +289,7 @@
         }
     
         .con_img_box {
-            height: 260px;
+            // height: 260px;
             overflow: hidden;
             border-radius: 10px;
         }
