--- a/css/eunjeong.css
+++ b/css/eunjeong.css
@@ -20,16 +20,18 @@
 }
 
 #hd {
-  max-width: 120rem;
   height: 4.5rem;
   position: relative;
   z-index: 10;
 }
-#hd .container {
+#hd .container_full {
   margin: 0 auto;
   padding: 1.25rem 0;
 }
 
+#gnb {
+  width: 0;
+}
 #gnb a {
   text-decoration: none;
   transition: color 0.3s ease;
@@ -56,12 +58,16 @@
   font-weight: 600;
   gap: 0.3125rem;
   justify-content: flex-end;
-  padding: 0.3125rem 0.625rem;
+  width: 0;
+}
+.util a {
+  display: flex;
+  padding: 10px 5px;
+  align-items: center;
 }
 .util svg {
-  width: 1.25rem;
-  height: 1.25rem;
-  margin-right: 0.3125rem;
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 a {
@@ -72,7 +78,6 @@ a {
 
 .mo-search {
   display: flex;
-  width: 100%;
   height: 3rem;
   border-radius: 100px;
   padding: 5px 10px;
@@ -170,7 +175,6 @@ a.list-group-reserve {
   left: 0;
   right: 0;
   margin: auto;
-  width: calc(100% - 30px);
   border-radius: 0.625rem;
   z-index: -1;
   -webkit-clip-path: inset(0 round 0.625rem);
@@ -311,6 +315,9 @@ a.list-group-reserve {
   border-radius: 0 0 10% 10%;
 }
 
+h1 {
+  font-size: small;
+}
 h1 a img {
   max-width: 7.5rem;
   height: auto;
